--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -6,4 +6,4 @@
 # cacheUrl: https://GITHUB_USERNAME.github.io/REPO_NAME/cache.json
 sources:
   - href: https://github.com/osmoscraft/osmosfeed/releases.atom # Get new feature announcement via this feed
-  - href: https://nitter.net/username/yamaki_nyx
+  - href: https://nitter.it/yamaki_nyx/rss
