--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -13,3 +13,4 @@ sources:
   - href: https://kz.zebraboss.com/feed/vk/club/201223334.rss
   - href: https://kz.zebraboss.com/feed/vk/id/220617968.rss
   - href: https://kz.zebraboss.com/feed/vk/club/167044850.rss
+  - href: https://nitter.it/tsutomu_nihei/rss
